nginx-ns-grn.yml
apiVersion: v1
kind: Namespace
metadata: 
  name: green
  labels:
     name: green
