route-namespace.yml
apiVersion: v1
kind: Namespace
metadata: 
  name: route
  labels:
     name: route
