nginx-deploy-grn.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-green
  namespace: green
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      namespace: green
      labels:
        app: nginx
        nginx/version: "IMAGE_TAG"
    spec:
      containers:
      - name: nginx
        image: ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/ecr_images_from_jenkins:IMAGE_TAG
        ports:
        - containerPort: 80
