route-deploy-grn.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route-deploy-grn
  namespace: route
  labels:
    route: green
spec:
  replicas: 1
  selector:
    matchLabels:
      route: green
  template:
    metadata:
      namespace: route
      labels:
        route: green
    spec:
      containers:
      - name: route
        image: ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/gateway:GRN_ROUTE_TAG
        volumeMounts:
        - name: route-grn
          mountPath: /etc/nginx/conf.d/
        ports:
        - name: web
          containerPort: 80
          protocol: TCP
      volumes:
      - name: route-grn
        configMap:
          name: route-grn
