route-pod-blue.yml
apiVersion: v1
kind: Pod
metadata:
  name: route-pod-blue
  namespace: route
  labels:
    route: blue
spec:
  containers:
    - name: route
      image: ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/gateway:BLUE_ROUTE_TAG
      volumeMounts:
      - name: route-blue
        mountPath: /etc/nginx/conf.d/      
      ports:
          containerPort: 80
          protocol: TCP
  volumes:
    - name: route-blue
      configMap:
        name: route-blue
