nginx-service-blue.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-blue
  namespace: blue
spec:
  selector:
    app: nginx
    nginx/version: "IMAGE_TAG"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
