nginx-service-grn.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-green
  namespace: green
spec:
  selector:
    app: nginx
    nginx/version: "IMAGE_TAG"
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
