route-service-blue.yml
apiVersion: v1
kind: Service
metadata:
  name: route-service-blue
  namespace: route
spec:
  selector:
    route: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
