route-service-grn.yml
apiVersion: v1
kind: Service
metadata:
  name: route-service-grn
  namespace: route
spec:
  selector:
    route: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
